feat: finished scripts, styles left

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <button id="button" type="button">Generate</button>
     </form>
 
-    <div id="results"></div>
+    <div id="root"></div>
 </body>
 
 
