feat: made adaptive design

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="checkInput">
             <label id="capitals">
                 <input type="checkbox" />
-                Use capital letters
+                <p>Use capital letters</p>
             </label>
 
             <label id="numbers">
